// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correclty 1`] = `
<div>
  <div>
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium avatar-default undefined-avatar css-17o22dy-MuiAvatar-root"
      data-testid="avatar"
      stile="default"
    >
      <span
        class="undefined-abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders on disabled 1`] = `
<div>
  <span
    class="MuiBadge-root css-1c32n2y-MuiBadge-root"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium avatar-default undefined-avatar css-17o22dy-MuiAvatar-root"
      data-testid="avatar"
      disabled=""
      stile="default"
    >
      <span
        class="undefined-abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-9sufak-MuiBadge-badge"
    >
      <div
        class="badge default MuiBox-root css-0"
        data-testid="badge"
        disabled=""
        status="default"
      />
    </span>
  </span>
</div>
`;

exports[`Avatar renders with badged 1`] = `
<div>
  <span
    class="MuiBadge-root css-1c32n2y-MuiBadge-root"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium avatar-default undefined-avatar css-17o22dy-MuiAvatar-root"
      data-testid="avatar"
      stile="default"
    >
      <span
        class="undefined-abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-9sufak-MuiBadge-badge"
    >
      <div
        class="badge default MuiBox-root css-0"
        data-testid="badge"
        status="default"
      >
        Badge content
      </div>
    </span>
  </span>
</div>
`;

exports[`Avatar renders with name 1`] = `
<div>
  <div>
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium avatar-default undefined-avatar css-17o22dy-MuiAvatar-root"
      data-testid="avatar"
      stile="default"
    >
      <span
        class="undefined-abbreviation"
        data-testid="avatar-abbreviation"
      >
        EM
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with stile primary 1`] = `
<div>
  <div>
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium avatar-primary undefined-avatar css-17o22dy-MuiAvatar-root"
      data-testid="avatar"
      stile="primary"
    >
      <span
        class="undefined-abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
  </div>
</div>
`;
